      integrating with other frameworks.

    - Fixed duplicate append event emission on repeated
      instrumented set.add() operations.

    - set-based collections |=, -=, ^= and &= are stricter about
      their operands and only operate on sets, frozensets or
      subclasses of the collection type. Previously, they would
      accept any duck-typed set.

- sql
    - Added COLLATE support via the .collate(<collation>)
      expression operator and collate(<expr>, <collation>) sql
      function.

    - Fixed bug with union() when applied to non-Table connected
      select statements

    - Improved behavior of text() expressions when used as FROM
      clauses, such as select().select_from(text("sometext"))
      [ticket:1014]

    - Column.copy() respects the value of "autoincrement", fixes
      usage with Migrate [ticket:1021]

- engines
    - Pool listeners can now be provided as a dictionary of
      callables or a (possibly partial) duck-type of
      PoolListener, your choice.

    - Added "reset_on_return" option to Pool which will disable
      the database state cleanup step (e.g. issuing a
      rollback()) when connections are returned to the pool.

-extensions
    - set-based association proxies |=, -=, ^= and &= are
      stricter about their operands and only operate on sets,
      frozensets or other association proxies. Previously, they
      would accept any duck-typed set.

- declarative extension
    - Joined table inheritance mappers use a slightly relaxed
      function to create the "inherit condition" to the parent
      table, so that other foreign keys to not-yet-declared
      Table objects don't trigger an error.

    - Fixed re-entrant mapper compile hang when a declared
      attribute is used within ForeignKey,
      i.e. ForeignKey(MyOtherClass.someattribute)

- mssql
    - Added "odbc_autotranslate" parameter to engine / dburi
      parameters. Any given string will be passed through to the
      ODBC connection string as:
